tests/errors/sem.no-implicit-type.dot-access.or
main :: () -> void {
    x := .name;
    x;
};
